# screen-recorder

./: .gitignore  README.md  index.html  vite.config.ts
docs/: hyprland-region-selector.md  region-selector-fixes.md  wayland-scaling-fix.md
openspec/changes/add-wayland-linux-support/: tasks.md
openspec/changes/archive/2025-12-04-refactor-platform-abstraction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-04-refactor-platform-abstraction/specs/platform-abstraction/: spec.md
openspec/changes/archive/2025-12-04-update-ui-theme/: proposal.md  tasks.md
openspec/changes/archive/2025-12-04-update-ui-theme/specs/ui-theme/: spec.md
openspec/changes/archive/2025-12-05-add-wayland-region-capture/: design.md  proposal.md  tasks.md
openspec/specs/platform-abstraction/: spec.md
openspec/specs/region-capture/: spec.md
openspec/specs/ui-theme/: spec.md
openspec/specs/wayland-capture/: spec.md
resources/linux/: hyprland-portals.conf  screen-recorder-picker.service  screen-recorder.portal
src/: main.ts  selection-overlay.css  selection-overlay.html  selection-overlay.ts  styles.css
src-picker/: Cargo.toml
src-picker/src/: ipc_client.rs  main.rs  portal_backend.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/capture/: error.rs  mod.rs  types.rs
src-tauri/src/capture/linux/: ipc_server.rs  mod.rs  pipewire_capture.rs  portal_client.rs
src-tauri/src/capture/macos/: mod.rs
src-tauri/src/capture/windows/: mod.rs  monitor_list.rs  region.rs  window_list.rs
src-tauri/src/encoder/: mod.rs
(+2 files in other folders)
