[package]
name = "screen-recorder-picker"
version = "0.1.0"
description = "Headless xdg-desktop-portal picker for screen-recorder"
authors = ["you"]
edition = "2021"

[[bin]]
name = "screen-recorder-picker"
path = "src/main.rs"

[dependencies]
# D-Bus for portal backend implementation
zbus = { version = "4", default-features = false, features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }

# Serialization for IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment and paths
dirs = "5"
